<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickPoll</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_poll">Create Poll</string>
    <string name="edit_question">Type a question...</string>
    <string name="choice_a">Choice A</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_c">Choice C</string>
    <string name="button_next">Next</string>
    <string name="title_activity_create_poll">Create Poll</string>
    <string name="title_activity_select_friends">SelectFriendsActivity</string>
    <string name="title_activity_display_poll">DisplayPollActivity</string>

</resources>
