<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quickpoll.CreatePollActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical">
    
    <EditText android:id="@+id/edit_question"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/edit_question" />
	
	<EditText android:id="@+id/choice_a"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/choice_a" />
	
	<EditText android:id="@+id/choice_b"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/choice_b" />
	
	<EditText android:id="@+id/choice_c"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/choice_c" />
	
	<Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/button_next"
        android:onClick="savePoll" />
</LinearLayout>